<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_text"
            android:layout_marginBottom="16dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_login_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_username" />

            <EditText
                android:id="@+id/et_login_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:autofillHints="username"
                android:background="@drawable/edit_text_field"
                android:hint="@string/login_hint"
                android:inputType="text"
                android:padding="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_login_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_password" />

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:autofillHints="username"
                android:background="@drawable/edit_text_field"
                android:inputType="textPassword"
                android:padding="5dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/error_red"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"

            android:text="@string/signup_text" />

    </LinearLayout>
</layout>