<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="activity"
            type="com.carloscoding.chatapp.login.LoginActivity" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_login_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_username"
            app:layout_constraintBottom_toBottomOf="@id/et_login_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_login_username" />

        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:autofillHints="username"
            android:background="@drawable/edit_text_field"
            android:hint="@string/login_hint"
            android:inputType="text"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_login_username"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            app:layout_constraintBottom_toBottomOf="@id/et_login_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_login_password" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="10dp"
            android:autofillHints="username"
            android:background="@drawable/edit_text_field"
            android:inputType="textPassword"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_login_username"
            app:layout_constraintTop_toBottomOf="@id/et_login_username" />

        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            android:textColor="@color/error_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:onClick="@{() -> activity.onLoginButtonClicked()}"
            android:text="@string/login_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_error_message" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>